<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:cardBackgroundColor="@color/colorCardItem">

        <LinearLayout

            android:id="@+id/templateSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />


            <Button
                android:id="@+id/btnMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnAddCoordinates" />

            <TextView
                android:id="@+id/mapCoordinatesResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_coordinates" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/errorMap"
                    android:layout_width="279dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_weight="1"
                    android:text="@string/not_coordinates_error"
                    android:textColor="@color/error"
                    android:visibility="invisible" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabCheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/colorAccent"
                    android:clickable="true"
                    android:focusable="true"
                    app:fabCustomSize="32dp"
                    app:srcCompat="@drawable/ic_check_black_8dp" />
            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>