<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:cardBackgroundColor="@color/colorCardItem">

        <LinearLayout

            android:id="@+id/templateSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/textview"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/buttonBackgroundLight"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/btnAddPhoto"
                android:textColor="@color/hypertext"
                app:backgroundTint="@color/buttonBackgroundLight"
                app:cornerRadius="22dp" />

            <TextView
                android:id="@+id/photoResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/not_photo"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/errorPhoto"
                    android:layout_width="279dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:layout_weight="1"
                    android:text="@string/not_dir_with_photo"
                    android:textColor="@color/error"
                    android:visibility="invisible" />
            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>