<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:cardBackgroundColor="@color/colorCardItem">

        <LinearLayout

            android:id="@+id/templateSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/textview"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="15sp" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/placeholder"
                    android:clipToPadding="false"
                    android:scaleType="fitXY" />


                <ImageButton
                    android:id="@+id/left_nav"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="110dp"
                    android:background="#80ffffff"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/arrow_right" />

                <ImageButton
                    android:id="@+id/right_nav"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_alignTop="@+id/left_nav"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="#80ffffff"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/arrow_left" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewFrag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pager"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:paddingTop="1dp" />


            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="22dp"
                    android:layout_height="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_photo" />

                <TextView
                    android:id="@+id/photoCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@color/buttonBackgroundLight"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/btnAddPhoto"
                    android:textColor="@color/hypertext"
                    android:textSize="12sp"
                    app:backgroundTint="@color/buttonBackgroundLight"
                    app:cornerRadius="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnPhotoDeleteAll"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPhotoDeleteAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/buttonBackgroundLight"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/btnDeleteAllPhoto"
                    android:textColor="@color/inactive_text"
                    android:textSize="12sp"
                    app:backgroundTint="@color/buttonBackgroundLight"
                    app:cornerRadius="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>